--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.koant.rwj</groupId>
+  <groupId>com.towerplus.mani</groupId>
   <artifactId>01-run-with-maven</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -24,10 +24,10 @@
             </execution>
           </executions>
           <configuration>
-
+				<propertyJmeter></propertyJmeter>
           </configuration>
         </plugin>
-        <plugin>
+       <!-- <plugin>
           <groupId>com.lazerycode.jmeter</groupId>
           <artifactId>jmeter-analysis-maven-plugin</artifactId>
           <executions>
@@ -37,26 +37,26 @@
                 <goal>analyze</goal>
               </goals>
               <configuration>
-                <!--
+                
                 An AntPath-Style pattern matching a JMeter XML result file to analyze. Must be a fully qualified path.
                 File may be GZiped, must end in .gz then.
 
                 Default: not set.
                 Required.
-                -->
+               
                 <source>${project.build.directory}/**/*.jtl</source>
 
-                <!--
+                
                 directory where to store analysis result files.
 
                 Default: ${project.build.directory}
                 Required.
-                -->
+               
                 <targetDirectory>${project.build.directory}/results</targetDirectory>
               </configuration>
             </execution>
           </executions>
-        </plugin>
+        </plugin> -->
       </plugins>
   </build>
 
