--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,13 @@
             </execution>
           </executions>
           <configuration>
-				<propertyJmeter></propertyJmeter>
+				 	<testResultsTimestamp>false</testResultsTimestamp>
+                    <overrideRootLogLevel>DEBUG</overrideRootLogLevel>
+                    <suppressJMeterOutput>false</suppressJMeterOutput>
+                    <ignoreResultFailures>true</ignoreResultFailures>
+                      <propertiesJMeter>
+                        <jmeter.save.saveservice.thread_counts>true</jmeter.save.saveservice.thread_counts>
+                    </propertiesJMeter>
           </configuration>
         </plugin>
        <!-- <plugin>
